# Credit_Card_Fraud_Detection_Model

./: .gitignore  Data_Cleansing.ipynb  Data_Preparation.ipynb  EDA.ipynb  EDA_Data_Protocol.xlsx  EDA_Reviewed.ipynb  Feature_Engineering.ipynb  Model Selection and Fine Tuning.ipynb  Model_Evaluation.ipynb  README.md  df_summary.xlsx  pyproject.toml
