[project]
name = "credit-card-fraud-detection-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Shogant",email = "shogantanya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "autoviz (>=0.1.905,<0.2.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "pandas-eda (>=1.2.0,<2.0.0)",
    "dtale (>=3.18.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
